dubaitourism.ae (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 5011,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.47,
  "homepage_snapshot_redirected_domain": "dubaitourism.ae",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402204152id_/http://dubaitourism.ae/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402204152id_/http%3A//dubaitourism.ae",
  "interval": "2006_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "dubaitourism.ae",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615114718id_/http%3A//dubaitourism.ae/Privacy/default.asp",
  "policy_title": "Department of Tourism and Commerce Marketing, Government of Dubai : Privacy Statement",
  "policy_url": "dubaitourism.ae/Privacy/default.asp",
  "sha1": "bb7f0d85ceb1ecd43202857e4b8032862507a19c",
  "simhash": 5249332167159431388,
  "simhash_updated": false,
  "site_hostname": "dubaitourism.ae",
  "site_url": "http://dubaitourism.ae",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615114718",
  "word_count": 840,
  "year": 2006
}

--- a/d/du/dub/dubaitourism.ae.html
+++ b/d/du/dub/dubaitourism.ae.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dubaitourism.ae privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231225422id_/http%3A//www.dubaitourism.ae/Privacy/default.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dubaitourism.ae privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615114718id_/http%3A//dubaitourism.ae/Privacy/default.asp) for the most accurate reproduction.-->
 
 <html><head><style>
 #divSelectDocumentID{left:0px; top:0px;}
@@ -48,7 +48,7 @@ function JA_ChangeDocument(SubCatID)
 
 
 
-<title>Dubai, Department of Tourism and Commerce Marketing : Privacy Statement</title>
+<title>Department of Tourism and Commerce Marketing, Government of Dubai : Privacy Statement</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <link rel="stylesheet" type="text/css" href="/common/MyStyle.css">
 <script language="JavaScript" src="/common/validation/validation_EN.js"></script>
@@ -57,6 +57,7 @@ function JA_ChangeDocument(SubCatID)
 
 <body marginheight="0" marginwidth="0">
 
+<!-- include virtual="/news/newsticker.asp" -->
 
 <style>
 #divTourism{position:absolute; width:163px; z-index:2; left:0px; top:30px; visibility:hidden;}
@@ -237,7 +238,7 @@ function JA_ChangeDocument(SubCatID)
 </tr>
 <tr><td height="1" background="/common/DottedLineTile.gif"></td></tr>
 <tr>
-	<td height="21" onmouseover="this.style.background='#B8B8A7'" onmouseout="this.style.background='#ABAB9A'"><a href="http://www.dubaitourism.ae/Japan" class="Beige11" target="_blank"><img src="/common/LangJP.gif" width="76" height="21" border="0" alt="Japanese"></a></td>
+	<td height="21" onmouseover="this.style.background='#B8B8A7'" onmouseout="this.style.background='#ABAB9A'"><a href="/ja_default.asp" class="Beige11"><img src="/common/LangJP.gif" width="76" height="21" border="0" alt="Japanese"></a></td>
 </tr>
 </tbody></table>
 </div>
@@ -261,7 +262,7 @@ function JA_ChangeDocument(SubCatID)
 		<tr>
 			<td width="132" height="23"><a href="/default.asp"><img src="/common/header/BtnHome.gif" width="132" height="23" border="0" alt="Home"></a></td>
 			<td width="122" height="23"><a href="javascript:OpenWeather();"><img src="/common/header/BtnWeather.gif" width="122" height="23" border="0" alt="Weather"></a></td>
-			<td width="135" height="23" align="center" background="/common/header/ClearBlueTile.gif" class="LightBlue11">1&nbsp;January&nbsp;2006</td>
+			<td width="135" height="23" align="center" background="/common/header/ClearBlueTile.gif" class="LightBlue11">15&nbsp;June&nbsp;2006</td>
 		</tr>
 		<tr>
 			<td width="389" height="134" colspan="3">
@@ -276,12 +277,12 @@ function JA_ChangeDocument(SubCatID)
 				</OBJECT>
 			</td-->
 			<td width="316" height="134" colspan="2" background="/common/header/Arabesque.gif" align="center">
-				 <br><br><br>
+				<a target="_new" href="http://www.dubaitourism.ae/admin/admentor/admentorredir.asp?id=147&amp;way=ban"><img hspace="10" src="/images/ads/OSICBanners.gif" alt="One Stop Information Centre" border="0" width="290" height="80"></a> <br><br><br>
 			</td>
 			<td width="76" height="134"><img src="/common/header/TitleDubai.gif" width="76" height="134"></td>
 		</tr>
 		<tr>
-		    <td colspan="3" align="center"><marquee onmouseover="this.stop();" onmouseout="this.start();" direction="up" scrollamount="1" scrolldelay="10" top="2" left="0" width="389" height="20"><p></p><center><font size="-1" color="Black">28/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=989">DSF 2006 CALENDAR OF EVENTS UNVEILED</a></font></center><p></p><p></p><center><font size="-1" color="Black">27/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=988">OVERWHELMING RESPONSE TO DSF ROADSHOWS</a></font></center><p></p><p></p><center><font size="-1" color="Black">26/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=987">DTCM PROMOTES SPECIAL NEEDS TOURISM</a></font></center><p></p><p></p><center><font size="-1" color="Black">25/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=984">BIN SULAYEM DISCUSSES BI-LATERAL TIES WITH SRI LANKAN MINISTER</a></font></center><p></p><p></p><center><font size="-1" color="Black">24/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=983">DUBAI HOTELS RECORD WORLD'S HIGHEST OCCUPANCY RATE    </a></font></center><p></p><p></p><center><font size="-1" color="Black">21/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=986">GERMAN CRUISE LINER DOCKS IN DUBAI</a></font></center><p></p><p></p><center><font size="-1" color="Black">20/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=985">JANET SEALY PARTNERSHIP (JSP) TO MARKET DUBAI IN EUROPE </a></font></center><p></p><p></p><center><font size="-1" color="Black">19/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=982">DUBAI –FRANCE TRADE AND TOURISM LINKS SET FOR BOOST </a></font></center><p></p><p></p><center><font size="-1" color="Black">18/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=981">BIGGEST-EVER LONDON TAXI ADVERTISING CAMPAIGN  </a></font></center><p></p><p></p><center><font size="-1" color="Black">17/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=980">DUBAI SEEKS CLOSER TOURISM TIES WITH TANZANIA   </a></font></center><p></p><p></p><center><font size="-1" color="Black">14/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=979">33 UAE NATIONALS TAKE UP HOTEL JOBS UNDER MAHARAT  </a></font></center><p></p><p></p><center><font size="-1" color="Black">13/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=978">BIN SULAYEM MEET HUNGARIAN DELEGATION  </a></font></center><p></p><p></p><center><font size="-1" color="Black">12/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=977">US CRUISE LINER CALLS AT DUBAI CRUISE TERMINAL</a></font></center><p></p><p></p><center><font size="-1" color="Black">11/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=976">FOCUS ON STAFF TRAINING TO ACHIEVE EXCELLENCE</a></font></center><p></p><p></p><center><font size="-1" color="Black">10/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=975">DSF-2006 ROADSHOWS IN AGCC STATES  </a></font></center><p></p><p></p><center><font size="-1" color="Black">8/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=974">ANOTHER GERMAN CRUISE SHIP IN DUBAI </a></font></center><p></p><p></p><center><font size="-1" color="Black">7/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=973">DTCM WOOS BUSINESSMEN AT ‘UAE IN INDIA’ </a></font></center><p></p><p></p><center><font size="-1" color="Black">6/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=972">BTW INNOVATION AWARD FOR DUBAI CROWN PRINCE</a></font></center><p></p><p></p><center><font size="-1" color="Black">5/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=971">GERMAN HOTELIERS EXPLORE INVESTMENT OPPORTUNITIES </a></font></center><p></p><p></p><center><font size="-1" color="Black">4/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=970">OPERETTA TO MARK THE 34th UAE NATIONAL DAY</a></font></center><p></p><p></p><center><font size="-1" color="Black">3/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=968">BIGGEST SIGN BOARD FOR 34TH UAE NATIONAL DAY </a></font></center><p></p><p></p><center><font size="-1" color="Black">3/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=969">340 KG CAKE CUT FOR 34th UAE NATIONAL DAY</a></font></center><p></p><p></p><center><font size="-1" color="Black">2/Dec/2005 - <a href="http://www.dubaitourism.ae/news/default.asp?ID=967">SHEIKH SAEED OPENS 34th UAE NATIONAL DAY </a></font></center><p></p></marquee></td>
+		    <td colspan="3" align="center"><!--%=sMarquee%--></td>
 		</tr>
 		</tbody></table>
 	</td><td width="100%" rowspan="2" valign="top" background="/common/BackTile2.gif">
@@ -307,7 +308,7 @@ function JA_ChangeDocument(SubCatID)
 	<img src="Pixel.gif" width="1" height="8"><br>
 	&nbsp;<a href="/about/default.asp"><img src="/common/leftmenu/BtnAbout.gif" width="68" height="14" vspace="2" border="0" alt="About DTCM"></a>
 	<br>&nbsp;<a href="/News/default.asp"><img src="/common/leftmenu/BtnPress.gif" width="89" height="14" vspace="2" border="0" alt="Press Releases"></a>
-	<br>&nbsp;<a href="/Events/default.asp"><img src="/common/leftmenu/BtnEvents.gif" width="39" height="14" vspace="2" border="0" alt="Events"></a>
+	<br>&nbsp;<a href="/travel/TourDir_Events.asp"><img src="/common/leftmenu/BtnEvents.gif" width="39" height="14" vspace="2" border="0" alt="Events"></a>
 	<br>&nbsp;<a href="/Guestbook/default.asp"><img src="/common/leftmenu/BtnGuestbook.gif" width="62" height="14" vspace="2" border="0" alt="Guestbook"></a>
 	<br>&nbsp;<a href="/Links/default.asp"><img src="/common/leftmenu/BtnLinks.gif" width="31" height="14" vspace="2" border="0" alt="Links"></a>
 	<!--br>&nbsp;<a href="/Awards/default.asp"><img src="/common/leftmenu/BtnAwards.gif" width="77" height="14" vspace="2" border="0" alt="DTCM Awards"></a>-->
@@ -315,36 +316,46 @@ function JA_ChangeDocument(SubCatID)
 	<br>&nbsp;<a href="/Travel/default.asp?SubCatID=43"><img src="/common/leftmenu/BtnVisa.gif" width="100" height="14" vspace="2" border="0" alt="Visa Regulations"></a>
 	<br>&nbsp;<a href="/E-services/ecomplaints.asp"><img src="/common/leftmenu/BtnEcomplaints.gif" width="79" height="14" vspace="2" border="0" alt="E-Complaints"></a>
 	<br>&nbsp;<a href="/Sitemap/default.asp"><img src="/common/leftmenu/BtnSitemap.gif" width="51" height="14" vspace="2" border="0" alt="Sitemap"></a>
-	<br>&nbsp;<a href="/disabled/default.asp"><img src="/common/leftmenu/specialneeds.gif" width="112" height="14" vspace="2" border="0" alt="Special Needs Tourism"></a>			
+	<br>&nbsp;<a href="/disabled/default.asp?SubCatID=65"><img src="/common/leftmenu/specialneeds.gif" width="112" height="14" vspace="2" border="0" alt="Special Needs Tourism"></a>			
 	
-	<br>&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1">
-	<br><br>&nbsp;<a href="/Hotel/default.asp"><img src="/common/leftmenu/TitleHotelBooking.gif" width="86" height="31" border="0"></a><br>
+	<br>&nbsp;&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1">
+	<br>&nbsp;&nbsp;<a href="/Hotel/default.asp"><img src="/common/leftmenu/TitleHotelBooking.gif" width="86" height="31" border="0"></a><br>
 	<b class="DarkGreyGreen9">
 	&nbsp;&nbsp;Planning a trip to<br>
 	&nbsp;&nbsp;Dubai? Book your<br>
 	&nbsp;&nbsp;hotel online.</b>
 			
 	<br>&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1">
-	<br><br>&nbsp;<a href="/E-services/default.asp"><img src="/common/leftmenu/TitleEservices.gif" width="61" height="16" border="0"></a><br>
+	<br>
+	&nbsp;&nbsp;<a href="/E-services/default.asp"><img src="/common/leftmenu/TitleEservices.gif" width="61" height="16" border="0"></a><br>
 	<b class="DarkGreyGreen9">
 	&nbsp;&nbsp;Your One Stop<br>
 	&nbsp;&nbsp;Information Center</b>
-
-	<br>&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1">
-	<br><br>&nbsp;<a href="/smart"><img src="/common/leftmenu/smart_logo.gif" width="86" height="44" border="0"></a><br>
+	
+	<br>&nbsp;&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1"><br>
+	&nbsp;&nbsp;<a href="http://www.dubaitourism.ae/newsletter/arrow/ar_RemoteDynForm.asp?UserID=3"><img src="/common/leftmenu/WeeklyNewsLetter.gif" border="0"></a><br>
+	<b vlass="DarkGreyGreen9">
+	&nbsp;&nbsp;Subscribe to the<br>
+	&nbsp;&nbsp;Dubai Weekly<br>
+	&nbsp;&nbsp;Newsletter<br>
+	&nbsp;&nbsp;Service</b>
+	
+	<br>&nbsp;&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1"><br>
+	&nbsp;&nbsp;<a href="http://www.dubaitourism.ae/Circulars/default.asp"><img src="/common/leftmenu/LegislationsInstructions.gif" border="0"></a><br>
+	<b vlass="DarkGreyGreen9">
+	&nbsp;&nbsp;Legislations <br>
+	&nbsp;&nbsp;and Instructions<br>
+	&nbsp;&nbsp;Governing the<br>
+	&nbsp;&nbsp;Dubai Tourism<br>
+	&nbsp;&nbsp;Industry</b>
+	
+	<br>&nbsp;&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1">
+	<br><br>&nbsp;&nbsp;<a href="/smart"><img src="/common/leftmenu/smart_logo.gif" width="86" height="44" border="0"></a><br>
 	<b class="DarkGreyGreen9">
 	&nbsp;&nbsp;S. M. A. R. T.<br>
 	&nbsp;&nbsp;Suggestion<br>
 	&nbsp;&nbsp;Scheme</b>
-	<br>&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1">
-	
-	<form method="post" action="/newsletter/subscribe.asp" name="NewsletterForm">
-	<center><font class="DarkGreyGreen9">Subscribe to Newsletter</font></center>
-	&nbsp;<input type="text" name="MemberEmail" value="" class="fieldBorderGrey" style="width:85">
-	<input type="button" name="BtnSubscribe" class="buttonBorderGrey" value="Go" onclick="Subscribe(1);" style="height:16; color:#646567;"><br>
-	&nbsp;<a href="javascript:Subscribe(-1);" class="LightBlue9"><u>Unsubscribe</u></a>
-	<input type="hidden" name="func" value="">
-	</form>
+	<br>&nbsp;<img src="/common/PixelGrey.gif" width="60" height="1"><br>
 	
 	<center><!--a href="http://213.42.49.219/cgi-bin/redirect.cgi/DTCM?REGION=E_Gov_Logo&CAMPAIGN=logo_DTCM&ACCOUNT=E_Gov_Logo&BANNER=egov_logo_white150x45jpg" target="_Blank" border="0">
 	<img border="0" src="http://213.42.49.219/cgi-bin/getimage.cgi/DTCM?REGION=E_Gov_Logo&CAMPAIGN=logo_DTCM&ACCOUNT=E_Gov_Logo&BANNER=egov_logo_white150x45jpg" width="123"></a--></center>
