--- a/m/mu/mus/musicarts.com.html
+++ b/m/mu/mus/musicarts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the musicarts.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210163253id_/http%3A//musicarts.com/about/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the musicarts.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615114909id_/http%3A//www.musicarts.com/about/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -171,7 +171,7 @@ return true
 						<table width="139" align="center" border="0" cellspacing="0" cellpadding="0">
 							<tbody><tr>
 								<td align="center"><br>
-								<a href="/news/news.cfm?newsId=53"><img src="/images/holidaysale.jpg" alt="" width="139" height="140" border="0"></a><br><br></td>
+								<a href="/lessons/"><img src="/images/improveyourskills.jpg" alt="" width="139" height="140" border="0"></a><br><br></td>
 							</tr>
 						</tbody></table><br><br></td>
 					<!-- ///TOP -->
@@ -348,7 +348,7 @@ return true
 					<td bgcolor="#D0EAFD" height="1"><img src="/images/pix.gif" width="1" height="1" border="0"></td>
 				</tr>
 				<tr>
-					<td bgcolor="#024378" height="22" align="center" class="copy">Copyright © 2005 Music &amp; Arts Center. <a class="botlinks" href="/about/privacy.cfm">Privacy Policy</a> - <a class="botlinks" href="/about/terms.cfm">Terms Of Use</a></td>
+					<td bgcolor="#024378" height="22" align="center" class="copy">Copyright © 2005-2006 Music &amp; Arts Center. <a class="botlinks" href="/about/privacy.cfm">Privacy Policy</a> - <a class="botlinks" href="/about/terms.cfm">Terms Of Use</a></td>
 				</tr>
 			</tbody></table>
 			
