--- a/m/me/mer/mercuryinsurance.com.html
+++ b/m/me/mer/mercuryinsurance.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mercuryinsurance.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210043148id_/http%3A//about.mercuryinsurance.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mercuryinsurance.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615115456id_/http%3A//about.mercuryinsurance.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head><title>Mercury Insurance Services</title>
 
@@ -21,19 +21,7 @@
 
 		<link rel="stylesheet" type="text/css" href="/css/mercMenu-wide.css" media="all">
 		<script language="JavaScript1.2" src="/js/mercmenu/api.js" type="text/javascript">
-		<!-- 
-		
-		-->
-		</script>
-		<script language="JavaScript1.2" src="/js/mercmenu/menucode.js" type="text/javascript">
-		<!-- 
-		
-		-->
-		</script>
-		<script language="JavaScript1.2" src="/js/mercmenu/mercMenu-wide.asp" type="text/javascript">
-		<!-- 
-		
-		-->
+
 		</script>
 </head>
 <body bgcolor="#CCCCCC" marginwidth="0" marginheight="0" topmargin="0" leftmargin="0" rightmargin="0" link="#333333" alink="#333333" vlink="#333333">
@@ -57,7 +45,16 @@
 
 	</td></tr></tbody></table>
 	<!-- top header / end -->
-	        
+	     	<script language="JavaScript" type="text/javascript">
+		var navVer = navigator.appVersion;
+		if(navVer.substr(0,3) >= 4)
+		if((navigator.appName=='Netscape') && (parseInt(navigator.appVersion)==4))
+			document.write("<"+"script language='JavaScript' type='text/javascript' src='http://www.mercuryinsurance.com/js/nsmenu.js'><\/script\>");
+		else
+			document.write("<"+"script language='JavaScript' type='text/javascript' src='http://www.mercuryinsurance.com/js/iemenu.js'><\/script\>");
+      </script><script language="JavaScript" type="text/javascript" src="http://www.mercuryinsurance.com/js/iemenu.js"></script>
+  
+
         <!-- menus / begin -->
 
 	<table cellspacing="0" cellpadding="0" width="760" bgcolor="white" border="0" cellborder="0">
@@ -226,7 +223,8 @@
 
 	<hr size="1" noshade="">
 
-	<a href="http://www.mercuryinsurance.com/" class="link1">home</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http:// .mercuryinsurance.com/quotes/Default.asp" class="link1">quick quote</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://contact.mercuryinsurance.com/agentlocator.asp?appvar=" class="link1">agent locator</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://about.mercuryinsurance.com/" class="link1">about mercury</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://contact.mercuryinsurance.com/" class="link1">contact mercury</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://investor.mercuryinsurance.com/" class="link1">investor information</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://www.mercuryinsurance.com/claims" class="link1">claims</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="/agentlogin" class="link1">agent/broker
+	<a href="http://www.mercuryinsurance.com/" class="link1">home</a>&nbsp;&nbsp;:&nbsp;&nbsp;
+	<a href="http://www.mercuryinsurance.com/quotes" class="link1">quick quote</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://contact.mercuryinsurance.com/agentlocator.asp?appvar=" class="link1">agent locator</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://about.mercuryinsurance.com/" class="link1">about mercury</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://contact.mercuryinsurance.com/" class="link1">contact mercury</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://investor.mercuryinsurance.com/" class="link1">investor information</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="http://www.mercuryinsurance.com/claims" class="link1">claims</a>&nbsp;&nbsp;:&nbsp;&nbsp;<a href="/agentlogin" class="link1">agent/broker
     login</a><br>
 
 	<img src="http://www.mercuryinsurance.com/images/pixel.gif" width="760" height="4" alt="Spacer"><br>
