--- a/i/ip/ip2/ip2location.com.html
+++ b/i/ip/ip2/ip2location.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ip2location.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212132409id_/http%3A//www.ip2location.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ip2location.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615115528id_/http%3A//ip2location.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Map IP Address to Geographical Location for the Internet - IP2Location™</title>
