--- a/n/ne/nev/nevadaart.org.html
+++ b/n/ne/nev/nevadaart.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nevadaart.org privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230124519id_/http%3A//www.nevadaart.org/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nevadaart.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615121758id_/http%3A//nevadaart.org/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy of the NMA</title>
