--- a/a/al/ala/ala.org.html
+++ b/a/al/ala/ala.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ala.org privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231053940id_/http%3A//ala.org/ala/home/privacystatement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ala.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615122033id_/http%3A//www.ala.org/ala/home/privacystatement.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html lang="ENG"><head>
 
