--- a/d/da/dai/dailyom.com.html
+++ b/d/da/dai/dailyom.com.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the dailyom.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230180533id_/http%3A//www.dailyom.com/misc/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dailyom.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615123112id_/http%3A//www.dailyom.com/misc/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>DailyOM - Privacy Policy</title>
 </head><body bgcolor="#ffffff" text="#55494B" link="#55494B" vlink="55494B">
 
 
+<center>
 
 <table width="740">
 <tbody><tr><td>
@@ -17,7 +18,8 @@
 
 <table valign="bottom"><tbody><tr><td align="right" valign="center">
 <font face="verdana, helvetica, arial" size="1">Today's DailyOM brought to you by:<br>
-<a href="http://www.dailyom.com/cgi-bin/display/sponsorlink.cgi?iid=30" target="sponsor"><img src="http://www.dailyom.com/work/sponsor/graphics/dailyomastrology1.gif" width="250" height="24" border="0" alt="Horoscope"></a>
+<a href="http://www.dailyom.com/cgi-bin/display/adspolink.cgi?iid=47&amp;aid=444" target="sponsor"><img src="http://www.dailyom.com/work/sponsor/graphics/dailycdsponsor.gif" width="275" height="24" border="0" alt="DailyCD - Click for your free DailyCD newsletter"></a>
+
 </font></td></tr></tbody></table>
 
 <a href="http://www.dailyom.com/cgi-bin/userinfo/settings.cgi?subscribe=1"><img src="http://www.dailyom.com/graphics/nav-signup.gif" width="52" height="18" border="0"></a><img src="http://www.dailyom.com/graphics/nav-line.gif" width="9" height="18">
@@ -65,7 +67,9 @@
 <font face="verdana, helvetica, arial" size="2">
 
 
+
 <img src="/graphics/heading-privacy.gif" width="165" height="30"><br>
+
 
 DailyOM is committed to protecting the privacy of our users and using their information responsibly. Please read below for detailed information about our privacy policy.<br>
 <br>
@@ -111,6 +115,7 @@ If you have any questions about this privacy policy, you can <a href="http://www
 <a href="http://www.dailyom.com/cgi-bin/browse/browse.cgi">Archives</a> | 
 <a href="http://www.dailyom.com/cgi-bin/email/contribute.cgi">Contribute</a> | 
 <a href="http://www.dailyom.com/cgi-bin/email/emailfriend.cgi">Share The OM</a> |
+<a href="http://www.dailyom.com/jobs/">Jobs</a> |
 <a href="http://www.dailyom.com/cgi-bin/email/contactus.cgi">Contact Us</a>
 <br>
 <a href="http://www.dailyom.com/cgi-bin/userinfo/settings.cgi?subscribe=1">Subscribe</a> | 
@@ -127,7 +132,7 @@ If you have any questions about this privacy policy, you can <a href="http://www
 <a href="http://www.dailyom.com/misc/syndicate.html">Publish DailyOM On Your Website</a>
 
 </font><p><font size="1" face="verdana">
-© 2004-05 DailyOM - All Rights Reserved<br>No portion of this site can be reprinted without express permission<br>
+© 2004-06 DailyOM - All Rights Reserved<br>No portion of this site can be reprinted without express permission<br>
 Artwork by <a href="http://www.orientaloutpost.com/wang.htm" target="wangartwork">Wang Chang-Ming</a>
 
 </font>
@@ -141,4 +146,4 @@ Artwork by <a href="http://www.orientaloutpost.com/wang.htm" target="wangartwork
 
 
 
-</body></html>
+</center></body></html>
