--- a/v/vi/vis/visitmalta.com.html
+++ b/v/vi/vis/visitmalta.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the visitmalta.com privacy policy that was archived on 2005-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051224235930id_/http%3A//visitmalta.com/en/about_us/visitmaltaprivacypolicy/vpp.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the visitmalta.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615123120id_/http%3A//visitmalta.com/en/about_us/visitmaltaprivacypolicy/vpp.html) for the most accurate reproduction.-->
 
 <html><head>
     <title> ___ VISIT MALTA ___ </title>
@@ -130,15 +130,15 @@ Request file: /home/web/www.visitmalta.com/html/en/about_us/visitmaltaprivacypol
 
     <td colspan="7" valign="top"><form name="pub" action="http://pub.nnx.com/nnx_redirect.html" method="post" target="_blank">
 
-<input type="hidden" name="id_bandeau" value="e524e49fea67a37de5a460669e2f73b1">
+<input type="hidden" name="id_bandeau" value="BANDEAU DEFAUT">
 
-<input type="hidden" name="id_campagne" value="8d80e91686e275dedf001faacc60e732">
+<input type="hidden" name="id_campagne" value="">
 
 <input type="hidden" name="id_place" value="05c4739b83a53dd86de4f954f66ee339">
 
-<input type="hidden" name="url" value="http://www.westinmalta.com">
+<input type="hidden" name="url" value="http://">
 
-<a href="javascript:document.pub.submit();"><img src="http://pub.nnx.com/images/pub/2a04c89c0961d6950a328da9683128a3/clients/d73c99279fb6725530c215afd5f7f910/8d80e91686e275dedf001faacc60e732/468x60_visitmalta_banner2.gif" width="468" height="60" alt="WESTIN DRAGONARA RESORT" border="0"></a></form></td>
+<a href="javascript:document.pub.submit();"></a></form></td>
 
 
 
