--- a/w/ws/wsb/wsbradio.com.html
+++ b/w/ws/wsb/wsbradio.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wsbradio.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210031903id_/http%3A//wsbradio.com/common/inside/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wsbradio.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615123904id_/http%3A//wsbradio.com/common/inside/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <script language="javascript" src="/common/templates/slideshow.js"></script>
@@ -135,7 +135,7 @@ if(navigator.appVersion.indexOf("AOL") > -1)
     &nbsp;<br>
       <a href="/"><img src="/templates/station_logo.gif" width="150" height="48" alt="wsbradio.com" border="0"></a>
 <br>
-Atlanta's News, Weather, and Traffic Online<br>&nbsp;
+Atlanta's One Click for Updated News, Weather, and Traffic<br>&nbsp;
 <img src="/common/templates/images/trans.gif" width="168" height="1" border="0"></td></tr>
 <tr><td class="navhed" valign="middle" align="left"><img src="/common/templates/images/look.gif" height="10" width="10" vspace="1" hspace="4"><b>Search the site</b></td></tr>
 <tr><td align="center" valign="top">
@@ -188,12 +188,10 @@ Atlanta's News, Weather, and Traffic Online<br>&nbsp;
 &nbsp;&nbsp;&nbsp;<a class="subnav" href="/inside/contact_us.html">contact us</a><br>
 &nbsp;&nbsp;&nbsp;<a class="subnav" href="/inside/offers.html">special offers</a><br>
 &nbsp;&nbsp;&nbsp;<a class="subnav" href="/inside/sponsors.html">about our advertisers</a><br>
+<a class="topnav" href="/hurricane/">Hurricane Guide</a><br>
 <a class="topnav" href="/ajcjobs/">ajcjobs Job Source</a><br>
 <a class="topnav" href="/asktheexpert/">Ask The Experts</a><br>
-<a class="topnav" href="/kaiser/">Kaiser Permanente</a><br>
-&nbsp;&nbsp;&nbsp;<a class="subnav" href="/kaiser/">health news</a><br>
-&nbsp;&nbsp;&nbsp;<a class="subnav" href="/kaiser/flu_central.html">flu central</a><br>
-<a class="topnav" href="/bulldogsradio/">Bulldogs</a><br>
+<a class="topnav" href="/text/">Text Message Opportunities</a><br>
 <a class="topnav" href="http://www.lavalife.com/welcome.act?context=ancc&amp;a=3899&amp;zip=30303">Atlanta Personals</a><br>
 <a class="topnav" href="http://www.handelonthelaw.com/">Handel On The Law</a><br>
 
@@ -209,7 +207,7 @@ Atlanta's News, Weather, and Traffic Online<br>&nbsp;
 <table width="488" cellspacing="0" cellpadding="10" border="0">
 <tbody><tr><td align="center" valign="middle">
 <div align="left" style="float: none; left: 0px; top: 0px; position: relative; width: 468px;">
-<nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=Q5pJHAoAAHYAACJtd5E?" width="468" height="60" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=Q5pJHAoAAHYAACJtd5E?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=468x60;tile=1;ord=Q5pJHAoAAHYAACJtd5E?" height=60 width=468 border="0"></A></iframe></nolayer><ilayer id="ph468601" visibility="hidden" width="468" height="60"></ilayer>
+<nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=RJFU5woAAHMAAH0A4os?" width="468" height="60" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=RJFU5woAAHMAAH0A4os?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=468x60;tile=1;ord=RJFU5woAAHMAAH0A4os?" height=60 width=468 border="0"></A></iframe></nolayer><ilayer id="ph468601" visibility="hidden" width="468" height="60"></ilayer>
 
 
 </div>
@@ -220,20 +218,20 @@ Atlanta's News, Weather, and Traffic Online<br>&nbsp;
 <table width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#000000">
 <tbody><tr><td bgcolor="#000000" align="left" valign="top" height="35">
 <table align="left" width="98%" cellspacing="0" cellpadding="2" border="0" height="33">
-<tbody><tr><td rowspan="2" align="right" valign="top" nowrap=""><img src="/common/templates/images/headphones.gif" height="9" width="10"></td>
+<tbody><tr>
+<td rowspan="2" align="right" valign="top" nowrap=""><img src="/common/templates/images/headphones.gif" height="9" width="10"></td>
     <td align="left" valign="top" class="playerhed" width="17%" nowrap="">Now playing</td>
     <td rowspan="2" align="left" valign="bottom"><iframe src="/includes/nowplaying/nowplay_frame.html" width="100%" height="30" frameborder="0" scrolling="no" marginwidth="0"> </iframe></td>
+<td width="70" align="right"><a class="playerlink" href="/common/about_us/player_help_nat.html" nowrap="">audio help</a></td>
              </tr>
 <tr>
-<td align="left" valign="top" height="50%" class="player"><a class="playerlisten" href="javascript:openPlayer('http://www.streamaudio.com/stations/player/pages/index.asp?headertext=News-Talk%20750%20WSB&amp;Station=WSB_AM',' ','%20');" );"="">Listen live!</a></td>
-<td align="right" valign="top" height="50%" nowrap="" class="player"></td></tr>
+<td align="left" valign="top" height="50%" class="player"><a class="playerlisten" href="javascript:openPlayer('http://www.streamaudio.com/stations/player/pages/index.asp?headertext=News-Talk%20750%20WSB&amp;station=WSB_AM',' ','%20');" );"="">Listen live!</a></td>
+<td align="right" colspan="2" valign="top" height="50%" nowrap="" class="player"></td></tr>
 </tbody></table>
 </td></tr>
 
 		<tr><td bgcolor="#FFFFFF" align="left" width="100%" valign="top" height="34">
-		<table width="100%" cellspacing="0" cellpadding="0" border="0" height="32"><tbody><tr><td width="10" align="left"><img src="/common/templates/images/trans.gif" width="8" height="1"></td><td align="left" valign="middle" class="chname" nowrap="">Inside wsbradio.com</td><td align="right" valign="middle" class="txtspons" nowrap=""><span class="txtspons">Sponsored by:<a href="http://ad.doubleclick.net/jump/cxri.atlwsbam.text/inside;rr=1;pg=/common/inside/privacy.html;mkt=(none);sz=120x30;tile=1;ord=Q5pJHAoAAHYAACJtd5E?" target="_blank"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam.text/inside;rr=1;pg=/common/inside/privacy.html;mkt=(none);sz=120x30;tile=1;ord=Q5pJHAoAAHYAACJtd5E?" height="30" width="120" border="0"></a>
-<br clear="all">
-</span></td><td width="10" align="right"><img src="/common/templates/images/trans.gif" width="8" height="1"></td></tr></tbody></table>
+		<table width="100%" cellspacing="0" cellpadding="0" border="0" height="32"><tbody><tr><td width="10" align="left"><img src="/common/templates/images/trans.gif" width="8" height="1"></td><td align="left" valign="middle" class="chname" nowrap="">Inside wsbradio.com</td><td align="right" valign="middle" class="txtspons" nowrap=""></td><td width="10" align="right"><img src="/common/templates/images/trans.gif" width="8" height="1"></td></tr></tbody></table>
 		</td></tr>
 		<tr><td bgcolor="#000000" align="left" valign="top" height="1"><img src="/common/templates/images/trans.gif" width="445" height="1"></td></tr>
 
@@ -325,7 +323,7 @@ A final note: The Web is an evolving medium. If we need to change our privacy po
 
 </td></tr>
 <tr><td align="left" valign="top">
-<span class="storyhed">December events</span>
+<span class="storyhed">June events</span>
 <table width="120" border="0">
 <tbody><tr align="right" class="wday">
 <td>S</td>
@@ -347,33 +345,32 @@ A final note: The Web is an evolving medium. If we need to change our privacy po
 <td>6</td>
 <td>7</td>
 <td>8</td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-09" target="_top">9</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-10" target="_top">10</a></td>
+<td>9</td>
+<td>10</td>
 </tr><tr align="right">
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-11" target="_top">11</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-12" target="_top">12</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-13" target="_top">13</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-14" target="_top">14</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-15" target="_top">15</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-16" target="_top">16</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-17" target="_top">17</a></td>
+<td>11</td>
+<td>12</td>
+<td>13</td>
+<td>14</td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-15" target="_top">15</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-16" target="_top">16</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-17" target="_top">17</a></td>
 </tr><tr align="right">
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-18" target="_top">18</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-19" target="_top">19</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-20" target="_top">20</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-21" target="_top">21</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-22" target="_top">22</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-23" target="_top">23</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-24" target="_top">24</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-18" target="_top">18</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-19" target="_top">19</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-20" target="_top">20</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-21" target="_top">21</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-22" target="_top">22</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-23" target="_top">23</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-24" target="_top">24</a></td>
 </tr><tr align="right">
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-25" target="_top">25</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-26" target="_top">26</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-27" target="_top">27</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-28" target="_top">28</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-29" target="_top">29</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-30" target="_top">30</a></td>
-<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2005-12-31" target="_top">31</a></td>
-<td colspan="0">&nbsp;</td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-25" target="_top">25</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-26" target="_top">26</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-27" target="_top">27</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-28" target="_top">28</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-29" target="_top">29</a></td>
+<td><a href="/cgi-bin/events.cgi?type=date&amp;string=2006-06-30" target="_top">30</a></td>
+<td colspan="1">&nbsp;</td>
 </tr>
 
 </tbody></table>
@@ -398,16 +395,16 @@ A final note: The Web is an evolving medium. If we need to change our privacy po
 <tr><td align="center" valign="top" class="txtspons">
 our advertisers:
 <div align="center" style="float: none; left: 0px; top: 0px; position: relative; width: 120px;">
-<nolayer> <iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=3;ord=Q5pJHAoAAHYAACJtd5E?" width="120" height="90" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=3;ord=Q5pJHAoAAHYAACJtd5E?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=120x90;tile=3;ord=Q5pJHAoAAHYAACJtd5E?" height=90 width=120 border=0></A></iframe></nolayer><ilayer id="ph120901" visibility="hidden" width="120" height="90"></ilayer>
+<nolayer> <iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=3;ord=RJFU5woAAHMAAH0A4os?" width="120" height="90" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=3;ord=RJFU5woAAHMAAH0A4os?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=120x90;tile=3;ord=RJFU5woAAHMAAH0A4os?" height=90 width=120 border=0></A></iframe></nolayer><ilayer id="ph120901" visibility="hidden" width="120" height="90"></ilayer>
 
 <br><br>
 
 
 <nolayer>
  
-<iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=4;ord=Q5pJHAoAAHYAACJtd5E?" width="120" height="90" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no">
+<iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=4;ord=RJFU5woAAHMAAH0A4os?" width="120" height="90" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no">
  
-<a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=4;ord=Q5pJHAoAAHYAACJtd5E?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=120x90;tile=4;ord=Q5pJHAoAAHYAACJtd5E?" height=90 width=120 border=0></A>
+<a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=4;ord=RJFU5woAAHMAAH0A4os?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=120x90;tile=4;ord=RJFU5woAAHMAAH0A4os?" height=90 width=120 border=0></A>
  
 </iframe>
 
@@ -417,7 +414,7 @@ our advertisers:
 
 
 <br><br>
-<nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=Q5pJHAoAAHYAACJtd5E?" width="120" height="400" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=Q5pJHAoAAHYAACJtd5E?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=120x400;tile=2;ord=Q5pJHAoAAHYAACJtd5E?" height=400 width=120 border="0"></A></iframe></nolayer><ilayer id="ph1204001" visibility="hidden" width="120" height="400"></ilayer>
+<nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=RJFU5woAAHMAAH0A4os?" width="120" height="400" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=RJFU5woAAHMAAH0A4os?"><img src="http://ad.doubleclick.net/ad/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl; sz=120x400;tile=2;ord=RJFU5woAAHMAAH0A4os?" height=400 width=120 border="0"></A></iframe></nolayer><ilayer id="ph1204001" visibility="hidden" width="120" height="400"></ilayer>
 
 
 
@@ -430,23 +427,23 @@ our advertisers:
 <br>
 <a href="/common/inside/nthelp.html">help</a> | <a href="/common/inside/advanced_search.html">advanced search</a> | <a href="/common/inside/nat_faq.html">frequently asked questions</a> | <a href="/ads/index.html">how to advertise</a>  | <a href="/inside/eeoc.html">EEOC statement</a>
 <br><br>
-Copyright © 2005 Cox Radio Interactive &amp; <a href="http://www.coxradio.com" target="_blank">Cox Radio, Inc.</a> All rights reserved.
+Copyright © 2006 Cox Radio Interactive &amp; <a href="http://www.coxradio.com" target="_blank">Cox Radio, Inc.</a> All rights reserved.
 <a href="/common/inside/privacy.html">Privacy Policy</a> <br>By using this website, you accept the terms of our <a href="/common/inside/visitor_agreement.html">Visitor Agreement</a>. Please read it.  <br><a href="/p/store/storefront.cgi">Shopping</a> is provided in association with amazon.com.
 <br><br>
-<img src="/common/templates/images/amg.gif" width="46" height="16" alt="AMG" border="0"> © 2005 All Media Guide, LLC. Portions of content provided by All Music Guide®, a trademark of All Media Guide, LLC.
+<img src="/common/templates/images/amg.gif" width="46" height="16" alt="AMG" border="0"> © 2006 All Media Guide, LLC. Portions of content provided by All Music Guide®, a trademark of All Media Guide, LLC.
 
         <br>&nbsp;
          
         <br>&nbsp;
 </td></tr></tbody></table>
 </td></tr></tbody></table>
-<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=Q5pJHAoAAHYAACJtd5E?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(ph468601.pageX,ph468601.pageY); visibility='show';"></layer> 
+<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=RJFU5woAAHMAAH0A4os?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(ph468601.pageX,ph468601.pageY); visibility='show';"></layer> 
  
-<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=Q5pJHAoAAHYAACJtd5E?" width="120" height="400" visibility="hidden" onload="moveToAbsolute(ph1204001.pageX,ph1204001.pageY); visibility='show';"></layer>
+<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=RJFU5woAAHMAAH0A4os?" width="120" height="400" visibility="hidden" onload="moveToAbsolute(ph1204001.pageX,ph1204001.pageY); visibility='show';"></layer>
  
-<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=3;ord=Q5pJHAoAAHYAACJtd5E?" width="120" height="90" visibility="hidden" onload="moveToAbsolute(ph120901.pageX,ph120901.pageY); visibility='show';"></layer>
+<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=3;ord=RJFU5woAAHMAAH0A4os?" width="120" height="90" visibility="hidden" onload="moveToAbsolute(ph120901.pageX,ph120901.pageY); visibility='show';"></layer>
  
-<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=4;ord=Q5pJHAoAAHYAACJtd5E?" width="120" height="90" visibility="hidden" onload="moveToAbsolute(ph120902.pageX,ph120902.pageY); visibility='show';"></layer>
+<layer src="http://ad.doubleclick.net/adl/cxri.atlwsbam/inside;pg=/common/inside/privacy.html;mkt=atl;sz=120x90;tile=4;ord=RJFU5woAAHMAAH0A4os?" width="120" height="90" visibility="hidden" onload="moveToAbsolute(ph120902.pageX,ph120902.pageY); visibility='show';"></layer>
  
 
 
