--- a/s/st/sta/standardchartered.com.pk.html
+++ b/s/st/sta/standardchartered.com.pk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the standardchartered.com.pk privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218192207id_/http%3A//www.standardchartered.com/global/home/datapp.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the standardchartered.com.pk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615124346id_/http%3A//www.standardchartered.com/global/home/datapp.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><link rel="SHORTCUT ICON" href="/favicon.ico" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html">
@@ -66,7 +66,7 @@
 </font></form>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tbody><tr>
-<td><img src="/global/images/e_icon_blank.gif" alt=" " width="20" height="1" border="0"></td>
+<td><img src="/global/images/e_icon_blank.gif" alt="" width="20" height="1" border="0"></td>
 <td><br><br>
       <font face="Arial" size="2" style="FONT-SIZE: 10pt"><b><u>DATA PROTECTION AND PRIVACY 
       POLICY</u></b> 
@@ -167,39 +167,10 @@
       <font face="Arial" size="2" style="FONT-SIZE: 10pt">
       <p></p>
       </font></td></tr></tbody><tbody></tbody>
-  <tbody><tr><td><img src="/global/images/e_icon_blank.gif" alt=" " width="20" height="1" border="0"></td>
+  <tbody><tr><td><img src="/global/images/e_icon_blank.gif" alt="" width="20" height="1" border="0"></td>
   </tr></tbody></table>
 <blockquote></blockquote>
-<!-- BeGiN ReDsH -->
-<!-- START RedMeasure V4 - SSL CGI v1.1 $Revision: 1.3 $ --> 
-<!-- COPYRIGHT 2000 Red Sheriff Limited --> 
 
-<script language="JavaScript"><!-- 
-var pCid="sg_scb-sg_0"; 
-var w0=1; 
-var refR=escape(document.referrer); 
-if (refR.length>=252) refR=refR.substring(0,252)+"..."; 
-//--></script> 
-<script language="JavaScript1.1"><!-- 
-var w0=0; 
-//--></script> 
-<script language="JavaScript1.1" src="https://secure-jp.imrworldwide.com/sc1.js"> 
-</script> 
-<script language="JavaScript"><!-- 
-if(w0){ 
-       document.write('<img src="https://secure-jp.imrworldwide.com/cgi-bin/count?ref='+ 
-               refR+'&cid='+pCid+'" width=1 height=1>'); 
-} 
-document.write("<COMMENT>"); 
-//--> 
-</script><comment> 
-<noscript> 
-<img src="https://secure-jp.imrworldwide.com/cgi-bin/count?cid=sg_scb-sg_0" width=1 height=1> 
-</noscript> 
-</comment> 
-<!-- END RedMeasure V4 --> 
-
-<!-- EnD ReDsH --><!-- EnD CoNtEnT -->
 								</td>
 							</tr>
 						</tbody></table>
@@ -218,6 +189,9 @@ document.write("<COMMENT>");
 </tbody></table>
 
 
+<!-- BeGiN ReDsH -->
+<script language="JavaScript" src="http://www.standardchartered.com/global/redsh.js" type="text/javascript"></script> 
+<!-- EnD ReDsH --><!-- EnD CoNtEnT -->
 
 
 </body></html>
