styleschecks.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 5106,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.0,
  "homepage_snapshot_redirected_domain": "styleschecks.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060405155926id_/http://www.styleschecks.com/Home.aspx",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402205104id_/http%3A//styleschecks.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "styleschecks.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615125743id_/http%3A//www.styleschecks.com/service/service.aspx%3FpageCode%3D54",
  "policy_title": "Personal Checks, Labels, Checkbook Covers and Personal Cards ... The Styles Check Company",
  "policy_url": "styleschecks.com/service/service.aspx?pageCode=54",
  "sha1": "2ae9e3075ecd5c0bf24df9f5ff74f561711253ef",
  "simhash": 2394997528715123755,
  "simhash_updated": true,
  "site_hostname": "styleschecks.com",
  "site_url": "http://styleschecks.com",
  "smog": 13.87,
  "strict_updated": true,
  "timestamp": "20060615125743",
  "word_count": 871,
  "year": 2006
}

--- a/s/st/sty/styleschecks.com.html
+++ b/s/st/sty/styleschecks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the styleschecks.com privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211100040id_/http%3A//www.styleschecks.com/service/service.aspx%3FpageCode%3D54) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the styleschecks.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615125743id_/http%3A//www.styleschecks.com/service/service.aspx%3FpageCode%3D54) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//w3c//dtd html 4.0 transitional//en"><html><head>
         <title>
@@ -114,11 +114,43 @@ a.navbody:hover {
 	color: #993333;
 	text-decoration: none;
 }
+#topcenter{
+	position:absolute;
+	top:10px;
+	left:425px;
+	width:343px;
+	height:53px;
+	background:url(http://www.styleschecks.com/styles_assets/images/global/shoppingcenter_bg.gif) no-repeat;
+	}
+#Layer1{
+	display:none;
+}
 -->
 </style>
-
-
-
+<div id="topcenter">
+  <table width="100%" height="53" border="0" align="right" cellpadding="3" cellspacing="0">
+    <tbody><tr>
+      <td align="center" valign="top"><table width="93%" border="0" align="right" cellpadding="2" cellspacing="0">
+        <tbody><tr>
+          <td align="center"><a style="font-family:Arial, Helvetica, sans-serif; font-size:11px; font-weight:bold; color:#990033; text-decoration:none;" href="/shop/cart.aspx">SHOPPING CART</a></td>
+          <td align="center"><img src="http://www.styleschecks.com/styles_assets/images/global/dotspacer.gif" alt="" width="1" height="10"></td>
+          <td align="center"><a style="font-family:Arial, Helvetica, sans-serif; font-size:11px; font-weight:bold; color:#990033; text-decoration:none;" href="/my/orderstatus.aspx">ORDER STATUS</a> </td>
+          <td align="center"><img src="http://www.styleschecks.com/styles_assets/images/global/dotspacer.gif" alt="" width="1" height="10"></td>
+          <td align="center"><a style="font-family:Arial, Helvetica, sans-serif; font-size:11px; font-weight:bold; color:#990033; text-decoration:none;" href="/reorder/login.aspx">QUICK REORDER</a> </td>
+        </tr>
+      </tbody></table></td>
+    </tr>
+    <tr>
+      <td align="right"><form name="searchform" action="http://www.styleschecks.com/styles_assets/checks/SearchSC.asp?stringtofind='document.searchform.jumper.value'&amp;br=SC" target="_top"><table width="95%" border="0" cellspacing="0" cellpadding="0">
+        <tbody><tr>
+          <td style="font-family:Arial, Helvetica, sans-serif; font-size:12px; color:#993333; font-weight:bold;">Search for Checks: </td>
+          <td><input name="stringtofind" type="text" style="font-family:Arial, Helvetica, sans-serif; font-size:11px; color:#333;" size="26"></td>
+          <td><input type="image" name="imageField" src="http://www.styleschecks.com/styles_assets/images/global/searchgo.gif"></td>
+        </tr>
+      </tbody></table></form></td>
+    </tr>
+  </tbody></table>
+</div>
 <table width="136" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
     <td><table width="136" border="0" cellspacing="0" cellpadding="0">
@@ -409,7 +441,7 @@ a.navbody:hover {
       </p><p align="left">If you provide us with your e-mail address, we will 
               use it to correspond with you regarding your order(s). If you place 
               an order online, we will automatically send you an e-mail to confirm 
-              when your order is placed and to inform you when that order is shipped. 
+              when your order is placed and to inform you when that order is shipped.  We also send reorder reminders, product offers and discounts via e-mail. You are given the option to opt-out of these marketing messages at the point where you supply your e-mail address.   
               Visitors who supply us with their telephone numbers online will 
               only receive telephone contact from us with information regarding 
               orders they have placed online. 
@@ -450,7 +482,7 @@ a.navbody:hover {
         logs the information coming from our site on our behalf, we control how 
         that data may and may not be used. If you do not want to help us learn 
         how to improve our site, products, offers and marketing strategy, you 
-        can "opt-out" of this web-site analysis tool by <a href="http://optout.styleschecks.rpts.net/cgi-bin/rpts/optout.pl">clicking 
+        can "opt-out" of this web-site analysis tool by <a href="#" onclick="javascript:window.open('/styles_assets/checks/opt_out.html', 'Website_Analytics_Opt_out', 'height=400,width=600', false);">clicking 
         here.</a>
 </p><p align="left"> If you feel this site is not following its stated information 
         policy, you may contact us at the above phone number, email address or 
@@ -504,7 +536,7 @@ cmCreatePageviewTag("SC_Customer Service - Privacy","SC_Customer Service",null,n
             |
             <a id="_ctl0_ctlBottomNav_hlkBottom9" href="http://www.styleschecks.com/service/service.aspx?pageCode=16">Prices</a>
             |
-            <a id="_ctl0_ctlBottomNav_hlkBottom10" href="http://www.styleschecks.com/service/service.aspx?pageCode=53">FAQ</a>
+            <a id="_ctl0_ctlBottomNav_hlkBottom10" href="http://www.styleschecks.com/service/service.aspx?pageCode=53">FAQs</a>
             |
             <a id="_ctl0_ctlBottomNav_hlkBottom11" href="http://www.styleschecks.com/service/freebrochure.aspx">
 				Free Brochure</a>
