macmillan.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2733,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.63,
  "homepage_snapshot_redirected_domain": "macmillan.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060409054406id_/http://www.macmillan.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060409054406id_/http%3A//macmillan.com",
  "interval": "2006_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "macmillan.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615130408id_/http%3A//www.macmillan.com/privacy.asp",
  "policy_title": "Welcome to macmillan publishers",
  "policy_url": "macmillan.com/privacy.asp",
  "sha1": "e9a3c591e60a2c23f11bf3fa23387c4342fa6a87",
  "simhash": 16341174228526850992,
  "simhash_updated": false,
  "site_hostname": "macmillan.com",
  "site_url": "http://macmillan.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615130408",
  "word_count": 440,
  "year": 2006
}

--- a/m/ma/mac/macmillan.com.html
+++ b/m/ma/mac/macmillan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the macmillan.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220141829id_/http%3A//www.macmillan.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the macmillan.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615130408id_/http%3A//www.macmillan.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -114,7 +114,8 @@ document.write('a:hover { color: #800000; text-decoration: underline }')
 document.write('--></style>')
 }
 
-//--></script>
+//-->
+</script>
 
 
 
@@ -199,29 +200,28 @@ td {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 12px;}
       <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tbody><tr>
           <td width="90%" valign="top" align="left" nowrap=""><img src="../images/otherimages/white.jpg" width="16" height="5"></td>
-          <td width="10%" valign="top" align="left">
-          </td>
+          <td width="10%" valign="top" align="left"></td>
         </tr>
-        <tr>
-          <td width="90%" valign="top" align="left" nowrap="">
+         <!--<tr>
+         <td width="90%" valign="top" align="left" nowrap>
             <p align="right"> <font color="#000000">Search</font> 
               
-<input type="text" name="Any" size="20"></p>
+				<input type="text" name="Any" size="20"></p>
           </td>
           <td width="10%" valign="top" align="left">
-            <input type="image" src="/images/otherimages/button.jpg" name="Submit" id="Submit" class="submit" value="Submit" width="25" height="22"></td>
+            <input type="image" src="/images/otherimages/button.jpg" name="Submit" id="Submit" class="submit" value="Submit" WIDTH="25" HEIGHT="22"></td>
         </tr>
         <tr>
-          <td width="90%" valign="top" align="right" nowrap=""><table border="0" cellpadding="0" cellspacing="0" width="20%">
-              <tbody><tr>
+          <td width="90%" valign="top" align="right" nowrap><table border="0" cellpadding="0" cellspacing="0" width="20%">
+              <tr>
                 <td align="right"><font size="1" color="#000000">site&nbsp;</font></td>
-                <td align="right"><input type="radio" value="site" checked="" name="R1"></td>
+                <td align="right"><input type="radio" value="site" checked name="R1"></td>
               </tr>
               <tr>
                 <td align="right"><font size="1" color="#000000">books</font><font size="1">&nbsp;</font></td>
-                <td align="right"><input type="radio" value="books" checked="" name="R1">
-                </td></tr></tbody></table></td>
-              </tr>
+                <td align="right"><input type="radio" value="books" checked name="R1">
+                </table></td>
+              </tr>-->
             </tbody></table></td>            
       </tr></tbody></table>
 <table border="0" cellspacing="0" cellpadding="0" width="100%">
