--- a/g/gs/gs./gs.com.html
+++ b/g/gs/gs./gs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gs.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212111731id_/http%3A//www.gs.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gs.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615130732id_/http%3A//gs.com/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Global Privacy Policy
