--- a/p/po/por/porndollar.com.html
+++ b/p/po/por/porndollar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the porndollar.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214223954id_/http%3A//www.porndollar.com/private.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the porndollar.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615132057id_/http%3A//porndollar.com/private.html) for the most accurate reproduction.-->
 
 <html><head></head><body background="/images/nback.jpg" topmargin="0" rightmargin="0" leftmargin="0" bottommargin="0" link="#ccff00" vlink="ccff00" alink="ccff00"><center>
 
